# OS-Cartel

./: CMakeLists.txt  DJalgo.c  DJalgo.h  Grov_para.c  Grov_para.h  Grov_seq.c  Grov_seq.h  README.md  list.txt  main.c
